fix double borders with one child

--- a/packages/documentation-redesign/src/components/ApiTable/ApiTable.module.css
+++ b/packages/documentation-redesign/src/components/ApiTable/ApiTable.module.css
@@ -30,3 +30,15 @@
 .AnchorHeader.NoButtonBorder {
   border-bottom: none;
 }
+
+.ApiTableText {
+  /* grid grid-cols-[minmax(100px,20%)_1fr] gap-2 border-solid border-0 border-b border-[var(--theme-color-soft-bdr)] */
+  display: grid;
+  grid-template-columns: minmax(100px, 20%) 1fr;
+  gap: 1rem;
+  border-bottom: 1px solid var(--theme-color-soft-bdr);
+}
+
+.ApiTableText:last-child {
+  border-bottom: none;
+}
